# dolphin

./: AOT_REASSEMBLER_PLAN.md  AOT_STATUS_2.md  AOT_STATUS_3.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_LOG.md
CMake/: StringifyHeader.cmake
Source/Core/AudioCommon/: AudioCommon.cpp  CMakeLists.txt  DeltaSoundStream.cpp  DeltaSoundStream.h  Mixer.cpp  Mixer.h
Source/Core/Common/: ArmFPURoundMode.cpp  CMakeLists.txt  FileUtil.cpp  MemoryUtil.cpp  WindowSystemInfo.h
Source/Core/Common/GL/: GLContext.cpp
Source/Core/Common/Logging/: Log.h  LogManager.cpp
Source/Core/Core/: CMakeLists.txt  Core.cpp  CoreTiming.cpp  CoreTiming.h  State.cpp  State.h
Source/Core/Core/Boot/: DolReader.h
Source/Core/Core/Config/: MainSettings.cpp  MainSettings.h
Source/Core/Core/HW/: DSP.cpp  DSP.h  GCPad.cpp  GCPad.h
Source/Core/Core/HW/DVD/: DVDInterface.cpp  DVDInterface.h  DVDThread.cpp  DVDThread.h
Source/Core/Core/HW/EXI/: EXI_Device.cpp  EXI_Device.h  EXI_DeviceMeleeNetplay.cpp  EXI_DeviceMeleeNetplay.h  HpsDecoder.cpp  HpsDecoder.h  MeleeJukebox.cpp  MeleeJukebox.h  MeleeNetplayExternalTestPump.cpp  MeleeNetplayExternalTestPump.h  MeleeNetplayExternalTransport.cpp  MeleeNetplayExternalTransport.h  MeleeRollbackState.cpp  MeleeRollbackState.h
Source/Core/Core/PowerPC/: AOTCore.cpp  AOTCore.h  AotModuleTracker.cpp  AotModuleTracker.h  AotRegistry.cpp  AotRegistry.h  AotRuntime.cpp  BreakPoints.cpp  BreakPoints.h  JitInterface.cpp  JitInterface.h  MMU.cpp  PowerPC.cpp  PowerPC.h  TraceCollector.cpp  TraceCollector.h
Source/Core/Core/PowerPC/AOT/: AOTCore.cpp  AOTCore.h  AotEmbedding.h  AotHarness.cpp  AotHarness.h  AotMmioCapture.h  AotModuleTracker.cpp  AotModuleTracker.h  AotRegistry.cpp  AotRegistry.h  AotRuntime.cpp  AotState.h  aot_runtime.h
Source/Core/Core/PowerPC/Interpreter/: Interpreter_LoadStorePaired.cpp  Interpreter_Paired.cpp  Interpreter_PairedTables.h  Interpreter_PairedUtils.h
Source/Core/Core/PowerPC/JitArm64/: Jit.cpp  Jit.h  JitArm64_BackPatch.cpp  (+1 more)
Source/Core/DolphinNoGUI/: CMakeLists.txt
Source/Core/DolphinQt/: CMakeLists.txt
Source/Core/DolphinQt/Settings/: AdvancedPane.cpp
Source/Core/DolphinTool/: AotCEmitter.cpp  AotCEmitter.h  AotCommand.cpp  AotCommand.h  CMakeLists.txt  CfgCommand.cpp  CfgCommand.h  DiffCommand.cpp  DiffCommand.h  OverlayImages.cpp  OverlayImages.h  PPCMemoryImage.h  RarcReader.cpp  RarcReader.h  RelFile.cpp  RelFile.h  RelModules.cpp  RelModules.h  ToolMain.cpp  VertexLoaderCEmitter.cpp  VertexLoaderCEmitter.h  VtxAotCommand.cpp  VtxAotCommand.h  Yaz0.cpp  Yaz0.h
Source/Core/InputCommon/: CMakeLists.txt  GCAdapter.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.h
Source/Core/VideoBackends/Metal/: CMakeLists.txt  MTLCaptureInterface.h  MTLGfx.h  MTLGfx.mm  MTLMain.mm  MTLUtil.h  MTLUtil.mm
Source/Core/VideoCommon/: CMakeLists.txt  VertexLoaderAOT.cpp  VertexLoaderAOT.h  VertexLoaderAotRegistry.cpp  VertexLoaderAotRegistry.h  VertexLoaderBase.cpp  VertexLoaderManager.cpp
Source/UnitTests/Core/: CMakeLists.txt  HpsDecoderTest.cpp
Tools/: trace_to_sqlite.py
docs/: restoration-2026-06.md  vertex-loader-aot-plan-prompt.md  vertex-loader-aot-status.md
docs/aot/: AOT_STATUS.md  AOT_STATUS_4.md  README.md
(+3 files in other folders)
